fix table overflow

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 :root {
   --black: #15151e;
   --grey: #1e1e27;
@@ -28,12 +27,11 @@ canvas,
 table,
 footer {
   margin: 0;
-  display: flex;
   background: var(--grey);
 }
 
 h1,
-h2{
+h2 {
   text-transform: capitalize;
   color: red;
 }
@@ -51,32 +49,25 @@ a:hover {
   text-decoration: underline;
 }
 
-body {
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+section {
+  width: 90%;
+  margin: 10px auto;
 }
 
-section {
-  margin: 10px 0px 50px 0px;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 90%;
+div.table-container {
+  width: 100%;
+  overflow: auto;
+}
+
+table {
+  margin: 0 auto;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* --------- */
 /* overview */
 /* ------- */
-section#overview {
-
-}
-
-section#overview table {
-  display: block;
-  border-collapse: collapse;
-}
-
 section#overview table td,
 section#overview table th {
   border: 2px solid black;
@@ -157,25 +148,14 @@ section#overview div.podium-wrapper>div:nth-child(3) {
 /* -------- */
 /* results */
 /* ------ */
-section#results {
-}
-
 section#results table td,
 section#results table th {
   border: 2px solid black;
   padding: 10px 10px 0px 10px;
 }
 
-section#results table {
-  display: block;
-  border-spacing: 0;
-  border-collapse: collapse;
-  overflow: hidden;
-  background-color: var(--white);
-}
-
-section#results table tr:first-child td ,
-section#results table tr td:first-child ,
+section#results table tr:first-child td,
+section#results table tr td:first-child,
 section#results table tr th:first-child {
   font-weight: bolder;
 }
